# SteinDB

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
locales/ar/: cli.json  common.json
locales/de/: cli.json  common.json
locales/en/: cli.json  common.json
locales/es/: cli.json  common.json
locales/fr/: cli.json  common.json
locales/hi/: cli.json  common.json
locales/id/: cli.json  common.json
locales/it/: cli.json  common.json
locales/ja/: cli.json  common.json
locales/ko/: cli.json  common.json
locales/nl/: cli.json  common.json
locales/pl/: cli.json  common.json
locales/pt-BR/: cli.json  common.json
locales/th/: cli.json  common.json
locales/tr/: cli.json  common.json
locales/vi/: cli.json  common.json
locales/zh-CN/: cli.json  common.json
locales/zh-TW/: cli.json  common.json
packaging/homebrew/: steindb.rb
scripts/: quality_gate.sh
src/steindb/: __init__.py
src/steindb/auth/: __init__.py  models.py
src/steindb/cli/: __init__.py  config_manager.py  display.py  licensing.py  main.py
src/steindb/cloud/: __init__.py  connectors.py  models.py  planner.py
src/steindb/contracts/: __init__.py  models.py
src/steindb/i18n/: __init__.py
src/steindb/rules/: __init__.py  base.py  datatypes_basic.py  datatypes_numeric.py  datatypes_temporal.py  ddl_alter.py  ddl_cleanup.py  ddl_indexes.py  ddl_tables.py  dependency.py  engine.py  grants.py  loader.py  materialized_views.py  p2o_datatypes_basic.py  p2o_datatypes_numeric.py  p2o_datatypes_temporal.py  p2o_ddl_alter.py  p2o_ddl_cleanup.py  p2o_ddl_tables.py  p2o_engine.py  p2o_grants.py  p2o_plsql_basic.py  p2o_sequences.py  p2o_syntax_datetime.py  p2o_syntax_functions.py  p2o_syntax_misc.py  p2o_triggers.py  packages.py  (+13 more)
tests/benchmarks/: __init__.py  conftest.py  test_rule_engine_perf.py
tests/fixtures/: sample_oracle.sql
tests/golden/: conftest.py  test_golden_llm.py
tests/integration/: test_cli_e2e.py  test_complex_package.py  test_p2o_pipeline.py
tests/property/: conftest.py  test_idempotency.py  test_null_handling.py  test_type_mappings.py
tests/regression/: conftest.py  regression_template.yaml
tests/unit/: test_accuracy.py  test_blocker_fixes.py  test_contracts.py  test_datatypes_basic.py  test_datatypes_numeric.py  test_datatypes_temporal.py  test_ddl_alter.py  test_ddl_cleanup.py  test_ddl_indexes.py  test_ddl_tables.py  test_dependency.py  test_grants.py  test_i18n.py  test_loader.py  test_major_fixes.py  test_materialized_views.py  test_p2o_datatypes_basic.py  test_p2o_datatypes_numeric.py  test_p2o_datatypes_temporal.py  test_p2o_ddl_alter.py  test_p2o_ddl_cleanup.py  test_p2o_ddl_tables.py  test_p2o_engine.py  test_p2o_grants.py  test_p2o_plsql_basic.py  test_p2o_sequences.py  test_p2o_syntax_datetime.py  test_p2o_syntax_functions.py  test_p2o_syntax_misc.py  test_p2o_triggers.py  test_packages.py  test_partitioning.py  test_plsql_basic.py  test_plsql_control_flow.py  test_registry.py  test_return_addmonths_fixes.py  test_rule_engine.py  test_sequences.py  test_speed.py  test_static_analysis.py  (+9 more)
(+131 files in other folders)
