[project]
name = "steindb"
version = "0.1.0"
description = "The only bidirectional Oracle <-> PostgreSQL migration tool"
requires-python = ">=3.12"
license = {text = "BSL-1.1"}
readme = "README.md"
keywords = ["oracle", "postgresql", "migration", "database", "sql", "plsql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.4,<25.0",
    "sqlparse>=0.5,<1.0",
    # CLI
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    "jinja2>=3.1,<4.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
# AI-assisted conversion (BYOK -- user's own API keys)
ai = [
    "httpx>=0.27,<1.0",
    "openai>=1.30,<2.0",
]
# Verification with pg_query parser
verifier = [
    "pglast>=6.0,<7.0",
]
# Live Oracle database connection
oracle = [
    "oracledb>=3.0,<4.0",
]
# Everything except oracle (which requires platform support)
all = ["steindb[ai,verifier]"]

[project.scripts]
stein = "steindb.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-timeout>=2.3,<3.0",
    "hypothesis>=6.100,<7.0",
    "mutmut>=2.4,<3.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
    "pre-commit>=3.7,<4.0",
    "types-pyyaml>=6.0,<7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    'ignore:Field name "schema" in .* shadows an attribute:UserWarning',
]
markers = [
    "golden: golden test cases (YAML pairs)",
    "llm_golden: LLM golden tests requiring BYOK endpoint",
    "unit: unit tests",
    "integration: integration tests",
    "slow: tests that take >10s",
    "benchmark: performance benchmark tests",
    "property: property-based tests using Hypothesis",
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["oracledb", "pglast", "pglast.*"]
ignore_missing_imports = true

# Typer decorators are untyped; contracts has intentional schema field shadow
[[tool.mypy.overrides]]
module = [
    "steindb.cli.commands.*",
    "steindb.cli.main",
    "steindb.contracts.*",
]
disable_error_code = ["misc", "assignment", "call-overload"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.coverage.run]
source = ["src/steindb"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.mutmut]
paths_to_mutate = "src/steindb/"
tests_dir = "tests/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steindb"]
